--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               minute-style-line
               minute-display-style-fine-2
               minute-text-style-outside
-              hand-style-hollow
+              hand-style-lume
               " id="utility-clock">
     <div class="centre">
         <div class="dynamic"></div>
@@ -261,26 +261,38 @@
     </div>
   </div>
 
-  <div class="col-sm-12">
+  <div class="col-sm-12 active-tour">
     <div class="thumbnail" style="background-image: url(assets/oris_65.png)">
       <button class="btn btn-styling mybutton-styling" data-toggle="modal" data-target="#myModal">Join This Tour!</button>
     </div>
   </div>
 
-  <div class="col-sm-12">
-    <div class="thumbnail" style="background-image: url(assets/omega_seamaster.png)"><br>
+  <div class="col-sm-12 active-tour">
+    <div class="thumbnail" style="background-image: url(assets/tissot_blue.png)"><br>
       <button class="btn btn-styling mybutton-styling" data-toggle="modal" data-target="#myModal">Join This Tour!</button>
     </div>
   </div>
 
-  <div class="col-sm-12">
+  <div class="col-sm-12 active-tour">
     <div class="thumbnail" style="background-image: url(assets/grand_seiko.png)">
       <button class="btn btn-styling mybutton-styling" data-toggle="modal" data-target="#myModal">Join This Tour!</button>
     </div>
   </div>
 
-  <div class="col-sm-12">
+  <div class="col-sm-12 active-tour">
     <div class="thumbnail" style="background-image: url(assets/zenith_el.png)">
+      <button class="btn btn-styling mybutton-styling" data-toggle="modal" data-target="#myModal">Join This Tour!</button>
+    </div>
+  </div>
+
+  <div class="col-sm-12 active-tour">
+    <div class="thumbnail" style="background-image: url(assets/iwc_auto.png)">
+      <button class="btn btn-styling mybutton-styling" data-toggle="modal" data-target="#myModal">Join This Tour!</button>
+    </div>
+  </div>
+
+  <div class="col-sm-12 active-tour">
+    <div class="thumbnail" style="background-image: url(assets/rado-centrix.jpg)">
       <button class="btn btn-styling mybutton-styling" data-toggle="modal" data-target="#myModal">Join This Tour!</button>
     </div>
   </div>
